<?xml version="1.0"?>
<package>
  <name>functions</name>
  <version>0.0.0</version>
  <description>The functions package implements some  general purpose classes and methods, such as point3D, RealVector...</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="dalejo@us.es">David Alejo Teissière</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


</package>